--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <h2 style="margin: 0; padding: 0; font-size: 2.2em">
             Números generados aleatoriamente:
         </h2>
-        <textarea rows="50" cols="50" style="
+        <textarea readonly rows="50" cols="50" style="
           -webkit-text-stroke: 0.1px black;
           font-weight: 700;
           margin: 1.5em 4em 0em 0;
